# todoList

./: .gitignore  README.md
frontend/: package.json
frontend/src/: index.js
frontend/src/components/: AddTodo.jsx  Header.jsx  Todo.jsx  TodoItem.jsx  TodoList.jsx
server/: main.py  pyproject.toml
server/app/: api.py  todoDBOp.py
