[tool.poetry]
name = "todoList"
version = "0.1.0"
description = "todo list app server side, using fastapi with sqlite"
authors = ["JackCheang5 <jackcheang5@gmail>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
fastapi = "^0.68.0"
aiofiles = "^0.7.0"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
